# simplemartini

./: README  pyproject.toml
calvatinize/: cli.py
simplemartini/: __init__.py  core.py
